# ins-python-sdk

./: .gitlab-ci.yml  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: air_data_unit_example.py  certus_serial_example.py  certus_tcp_example.py  spatial_example.py
src/an_devices/: certus_evo_device.py  spatial_device.py
tests/anpp_packets_tests/: an_packet_0_test.py  an_packet_1_test.py  decode_test.py  encode_decode_test.py  encode_test.py
