[tool.poetry]
name = "ins-python-sdk"
version = "0.1.0"
description = ""
authors = ["Charles Balderstone <charles.balderstone@advancednavigation.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastcrc = "^0.3.0"
pyserial = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
